# invenio-records-lom

./: .editorconfig  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  INSTALL.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  babel.ini  docker-compose.full.yml  docker-services.yml  invenio.cfg  pyproject.toml  pytest.ini  requirements-devel.txt  run-js-linter.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docker/nginx/: test.crt  test.key
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  license.rst  usage.rst
invenio_records_lom/: __init__.py  api.py  cli.py  config.py  ext.py  facets.py  fetchers.py  indexer.py  minters.py  models.py  oai.py  providers.py  proxies.py  signals.py  version.py  views.py
invenio_records_lom/alembic/: 1dc5abf0e34b_create_invenio_records_lom_tables.py  3c1ae3770e92_add_missing_columns.py  84003810e5b1_create_invenio_records_lom_branch.py  9042e95df58b_change_datetime_types.py  __init__.py
invenio_records_lom/fixtures/: __init__.py  demo.py  tasks.py
invenio_records_lom/fixtures/data/: __init__.py  vocabularies.yaml
invenio_records_lom/fixtures/data/vocabularies/: __init__.py  higher_education_resource_types.yaml  languages.yaml  lom_roles.yaml  mime_types.yaml  oefos.yaml  oer_licenses.yaml
invenio_records_lom/jsonschemas/: __init__.py
invenio_records_lom/jsonschemas/lom/: lom-v1.0.0.json
invenio_records_lom/jsonschemas/lomrecords/: lom-v1.0.0.json
invenio_records_lom/jsonschemas/lomrecords/records/: record-v1.0.0.json
invenio_records_lom/jsonschemas/records/: record-v1.0.0.json
invenio_records_lom/loaders/: __init__.py
invenio_records_lom/mappings/: __init__.py
invenio_records_lom/mappings/v5/: __init__.py
invenio_records_lom/mappings/v5/records/: record-v1.0.0.json
invenio_records_lom/mappings/v6/: __init__.py
invenio_records_lom/mappings/v7/: __init__.py  lom-v1.0.0.json
invenio_records_lom/mappings/v7/lomrecords/: __init__.py
invenio_records_lom/mappings/v7/lomrecords/records/: lom-v1.0.0.json
invenio_records_lom/marshmallow/: __init__.py  json.py
invenio_records_lom/records/: __init__.py  api.py  models.py
invenio_records_lom/records/dumpers/: __init__.py  statistics.py  stats.py
invenio_records_lom/records/jsonschemas/lomrecords/: lom-v1.0.0.json
invenio_records_lom/records/mappings/: __init__.py
invenio_records_lom/records/mappings/os-v2/: __init__.py
invenio_records_lom/records/mappings/os-v2/lomrecords/drafts/: draft-v1.0.0.json
invenio_records_lom/records/mappings/v7/: __init__.py
invenio_records_lom/records/statistics/: __init__.py  api.py
invenio_records_lom/records/statistics/templates/: __init__.py
invenio_records_lom/records/statistics/templates/aggregations/: __init__.py
invenio_records_lom/records/statistics/templates/events/: __init__.py
invenio_records_lom/records/systemfields/: __init__.py  context.py  providers.py  relations.py  resolver.py  results.py  statistics.py
invenio_records_lom/records/systemfields/access/: __init__.py  embargo.py  grants.py  protection.py
invenio_records_lom/records/systemfields/access/field/: parent.py
invenio_records_lom/resources/: __init__.py  config.py  resources.py
invenio_records_lom/resources/serializers/: __init__.py  schema.py  schemas.py  utils.py
invenio_records_lom/resources/serializers/csl/: __init__.py  schema.py  serializer.py
invenio_records_lom/resources/serializers/datacite/: __init__.py  schema.py  serializer.py
invenio_records_lom/resources/serializers/dublincore/: __init__.py  schema.py  serializer.py
invenio_records_lom/resources/serializers/oai/: __init__.py  schema.py  serializer.py
invenio_records_lom/resources/serializers/schemas/: __init__.py  datacite.py  dublin_core.py  oai.py  ui.py  utils.py
invenio_records_lom/resources/serializers/ui/: __init__.py  schema.py  serializer.py
invenio_records_lom/serializers/: __init__.py
invenio_records_lom/services/: __init__.py  components.py  config.py  facets.py  permissions.py  pids.py  schemas.py  services.py  tasks.py
invenio_records_lom/services/components/: __init__.py  access.py  pids.py  relations.py
invenio_records_lom/services/permissions/: __init__.py  generators.py  policy.py  roles.py
invenio_records_lom/services/schemas/: __init__.py  fields.py  metadata.py  records.py  statistics.py  stats.py
invenio_records_lom/static/templates/invenio_records_lom/: results.html
invenio_records_lom/templates/invenio_records_lom/: base.html  not_licensed_text.html  record.html  search.html  uploads.html
invenio_records_lom/templates/invenio_records_lom/records/: deposit.html  export.html  files.html
invenio_records_lom/templates/invenio_records_lom/records/helpers/: statistics.html
invenio_records_lom/templates/invenio_records_lom/records/macros/: files.html  tree.html
invenio_records_lom/translations/: messages.pot
invenio_records_lom/translations/de/LC_MESSAGES/: messages.po
invenio_records_lom/translations/en/LC_MESSAGES/: messages.po
invenio_records_lom/ui/: __init__.py
invenio_records_lom/ui/records/: __init__.py  decorators.py  deposits.py  errors.py  errrors.py  filters.py  records.py
invenio_records_lom/ui/theme/: __init__.py  config.py  views.py  webpack.py
invenio_records_lom/upgrade_scripts/: __init__.py  migrate_0_17_to_0_18.py  migrate_0_19_to_0_20.py  migrate_0_8_to_0_9.py  migrate_parent.py
invenio_records_lom/utils/: __init__.py  learning_resource_types.json  metadata.py  statistics.py  stats.py  util.py  vcard.py  vocabularies.py
tests/: __init__.py  conftest.py  fake_datacite_client.py  test_cli.py  test_fetchers.py  test_invenio_records_lom.py  test_invenio_resources.py  test_minters.py  test_pids_service.py  test_service.py  test_version.py
tests/api/: conftest.py  test_api_simple_flow.py  test_elasticsearch_mapping.py
tests/utils/: test_metadata.py  test_vcard.py  test_vocabularies.py
(+38 files in other folders)
