# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2022 Graz University of Technology.
#
# invenio-records-lom is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

#
# metadata and options
#
[metadata]
name = invenio-records-lom
version = attr: invenio_records_lom.__version__
description = "Invenio data model for Learning Object Metadata."
long_description = file: README.rst, CHANGES.rst
keywords = invenio record LOM learning object metadata
license = MIT
author = "Graz University of Technology"
author_email = info@tugraz.at
platforms = any
url = https://github.com/tu-graz-library/invenio-records-lom
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
zip_safe = False
install_requires =
    invenio-previewer>=1.3.4
    invenio-rdm-records>=0.35.16,<0.99

[options.extras_require]
tests =
    flake8<5.0.0 # necessary to prevent error AttributeError ConfigFileFinder not found
    invenio-app>=1.3.3,<2.0.0
    invenio-cache>=1.0.6
    invenio-search[opensearch2]>=2.0.0
    invenio-db>=1.0.13,<1.1.0
    pytest-bandit>=0.6.1
    pytest-black>=0.3.0
    pytest-flake8>=1.0.0
    pytest-invenio>=1.4.3
    pytest-mock>=1.6.0
    pytest-pylint>=0.18.0
    Sphinx>=4.4.0
    sphinx-autodoc-typehints>=1.10.3

[options.entry_points]
flask.commands =
    lom = invenio_records_lom.cli:lom
invenio_base.api_apps =
    invenio_records_lom = invenio_records_lom:InvenioRecordsLOM
invenio_base.api_blueprints =
    invenio_records_lom_records = invenio_records_lom.views:create_records_bp
invenio_base.apps =
    invenio_records_lom = invenio_records_lom:InvenioRecordsLOM
invenio_base.blueprints =
    invenio_records_lom_ui = invenio_records_lom.ui:create_blueprint
    invenio_records_lom_resource_registerer = invenio_records_lom.views:blueprint
invenio_db.models =
    invenio_records_lom = invenio_records_lom.records.models
invenio_i18n.translations =
    messages = invenio_records_lom
invenio_jsonschemas.schemas =
    invenio_records_lom = invenio_records_lom.jsonschemas
invenio_search.mappings =
    lomrecords = invenio_records_lom.records.mappings
invenio_assets.webpack =
    invenio_records_lom_theme = invenio_records_lom.ui.theme.webpack:theme

[aliases]
test = pytest

[bdist_wheel]
universal = 1

#
# Documentation
#
[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

#
# Translation
#
[compile_catalog]
directory = invenio_records_lom/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = Graz University of Technology
msgid_bugs_address = info@tugraz.at
mapping-file = babel.ini
output-file = invenio_records_lom/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_records_lom/translations/messages.pot
output-dir = invenio_records_lom/translations/

[update_catalog]
input-file = invenio_records_lom/translations/messages.pot
output-dir = invenio_records_lom/translations/

#
# Linting
#
[flake8]
max-line-length = 88
extend-ignore = E203
select = C,E,F,W,B,B950
ignore = E501

[pydocstyle]
add_ignore = D401

[pylint.messages_control]
disable = fixme, invalid-name, line-too-long, no-member, no-self-use, too-few-public-methods, too-many-arguments

[tool:isort]
profile = black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --bandit --black --flake8 --isort --pydocstyle --pylint --cov=invenio_records_lom --cov-report=term-missing tests invenio_records_lom --doctest-glob="*.rst" --doctest-modules
testpaths = tests invenio_records_lom
live_server_scope = module
