# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2024 Graz University of Technology.
#
# invenio-records-lom is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

#
# metadata and options
#
[metadata]
name = invenio-records-lom
version = attr: invenio_records_lom.__version__
description = "Invenio data model for Learning Object Metadata."
long_description = file: README.rst, CHANGES.rst
keywords = invenio record LOM learning object metadata
license = MIT
author = "Graz University of Technology"
author_email = info@tugraz.at
platforms = any
url = https://github.com/tu-graz-library/invenio-records-lom
classifiers =
    Programming Language :: Python :: 3.12
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
python_requires = >=3.12
zip_safe = False
install_requires =
    invenio-previewer>=1.3.6
    invenio-rdm-records>=1.1.0
    invenio-stats>=1.0.0

[options.extras_require]
tests =
    invenio-app>=1.3.3
    invenio-cache>=1.0.6
    invenio-db>=1.0.13
    invenio-i18n>=2.0.0
    invenio-search[opensearch2]>=2.0.0
    pytest-black-ng>=0.4.0
    pytest-invenio>=1.4.3
    pytest-mock>=1.6.0
    ruff>=0.4.4
    Sphinx>=4.4.0
    sphinx-autodoc-typehints>=1.10.3


[options.entry_points]
flask.commands =
    lom = invenio_records_lom.cli:lom
invenio_assets.webpack =
    invenio_records_lom_theme = invenio_records_lom.ui.theme.webpack:theme
invenio_base.api_apps =
    invenio_records_lom = invenio_records_lom:InvenioRecordsLOM
invenio_base.api_blueprints =
    invenio_records_lom_draft_files = invenio_records_lom.views:create_draft_files_bp
    invenio_records_lom_iiif = invenio_records_lom.views:create_iiif_bp
    invenio_records_lom_record_files = invenio_records_lom.views:create_record_files_bp
    invenio_records_lom_records = invenio_records_lom.views:create_records_bp
    invenio_records_lom_resource_registerer = invenio_records_lom.views:blueprint
invenio_base.api_finalize_app =
    invenio_records_lom = invenio_records_lom.ext:api_finalize_app
invenio_base.apps =
    invenio_records_lom = invenio_records_lom:InvenioRecordsLOM
invenio_base.blueprints =
    invenio_records_lom_ui = invenio_records_lom.ui:create_blueprint
    invenio_records_lom_resource_registerer = invenio_records_lom.views:blueprint
invenio_base.finalize_app =
    invenio_records_lom = invenio_records_lom.ext:finalize_app
invenio_celery.tasks =
    invenio_records_lom_tasks = invenio_records_lom.fixtures.tasks
invenio_db.alembic =
    invenio_records_lom = invenio_records_lom:alembic
invenio_db.models =
    invenio_records_lom = invenio_records_lom.records.models
invenio_i18n.translations =
    messages = invenio_records_lom
invenio_jsonschemas.schemas =
    invenio_records_lom = invenio_records_lom.records.jsonschemas
invenio_rdm_records.fixtures =
    invenio_records_lom = invenio_records_lom.fixtures.data
invenio_search.mappings =
    lomrecords = invenio_records_lom.records.mappings

[aliases]
test = pytest

[bdist_wheel]
universal = 1

#
# Documentation
#
[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

#
# Translation
#
[compile_catalog]
directory = invenio_records_lom/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = Graz University of Technology
msgid_bugs_address = info@tugraz.at
mapping-file = babel.ini
output-file = invenio_records_lom/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_records_lom/translations/messages.pot
output-dir = invenio_records_lom/translations/

[update_catalog]
input-file = invenio_records_lom/translations/messages.pot
output-dir = invenio_records_lom/translations/

#
# Linting
#
[check-manifest]
ignore = *-requirements.txt

[isort]
profile = black

[tool:pytest]
addopts = --black --cov=invenio_records_lom --cov-report=term-missing
testpaths = tests invenio_records_lom
live_server_scope = module
